Feat: Add platform

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,10 @@ upstream authentication {
     server 192.160.100.2:3000;
 }
 
+upstream platform {
+    server 192.160.100.3:3000;
+}
+
 ## Admin
 upstream pgadmin {
     server 192.160.1.3;
@@ -17,6 +21,7 @@ upstream authentication-ui {
     server 192.160.200.3:3000;
 }
 
+## Config for auth.localhost
 server {
     listen 80;
     server_name auth.localhost;
@@ -55,6 +60,71 @@ server {
         error_page 500 502 503 504 /500.html;
     }
 
+    location /v1/ {
+        rewrite ^/v1/(.*)$ /$1 break;
+
+        proxy_pass http://authentication;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+
+        proxy_intercept_errors on;
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /500.html;
+    }
+
+    location = /404.html {
+        root /code/templates;
+        internal;
+    }
+
+    location = /500.html {
+        root /code/templates;
+        internal;
+    }
+}
+
+
+## Config for platform.localhost
+server {
+    listen 80;
+    server_name platform.localhost;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name platform.localhost;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/server/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/server/privkey.pem;
+
+    location /static/ {
+        alias /code/static/;
+    }
+
+    #location / {
+    #    proxy_pass http://authentication-ui;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header Host $host;
+    #    proxy_redirect off;
+
+    #    proxy_intercept_errors on;
+    #    error_page 404 /404.html;
+    #    error_page 500 502 503 504 /500.html;
+    #}
+
     location /pgadmin/ {
         rewrite ^/pgadmin/(.*)$ /$1 break;
 
@@ -88,7 +158,7 @@ server {
     location /v1/ {
         rewrite ^/v1/(.*)$ /$1 break;
 
-        proxy_pass http://authentication;
+        proxy_pass http://platform;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
