--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,10 @@ upstream authentication-ui {
     server 192.160.200.3:3000;
 }
 
+upstream platform-ui {
+    server 192.160.200.4:3000;
+}
+
 ## Config for auth.localhost
 server {
     listen 80;
@@ -113,17 +117,17 @@ server {
         alias /code/static/;
     }
 
-    #location / {
-    #    proxy_pass http://authentication-ui;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_set_header Host $host;
-    #    proxy_redirect off;
+    location / {
+        proxy_pass http://platform-ui;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_redirect off;
 
-    #    proxy_intercept_errors on;
-    #    error_page 404 /404.html;
-    #    error_page 500 502 503 504 /500.html;
-    #}
+        proxy_intercept_errors on;
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /500.html;
+    }
 
     location /pgadmin/ {
         rewrite ^/pgadmin/(.*)$ /$1 break;
