Fix: Domains in develop is cubiko.dev

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,10 +25,10 @@ upstream platform-ui {
     server 192.160.200.4:3000;
 }
 
-## Config for auth.localhost
+## Config for auth.cubiko.dev
 server {
     listen 80;
-    server_name auth.localhost;
+    server_name auth.cubiko.dev;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -42,7 +42,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name auth.localhost;
+    server_name auth.cubiko.dev;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/server/fullchain.pem;
@@ -90,10 +90,10 @@ server {
 }
 
 
-## Config for platform.localhost
+## Config for platform.cubiko.dev
 server {
     listen 80;
-    server_name platform.localhost;
+    server_name platform.cubiko.dev;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -107,7 +107,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name platform.localhost;
+    server_name platform.cubiko.dev;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/server/fullchain.pem;
