Fix: Documentation and environment

--- a/.env-template
+++ b/.env-template
@@ -6,9 +6,11 @@ IP_PGADMIN=
 IP_NGINX=
 
 # Postgres DB
+POSTGRES_HOST=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+POSTGRES_PORT=
 
 # PGAadmin
 PGADMIN_DEFAULT_EMAIL=
