--- a/nginx.conf
+++ b/nginx.conf
@@ -59,6 +59,11 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
 
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
+
         proxy_intercept_errors on;
         error_page 404 /404.html;
         error_page 500 502 503 504 /500.html;
@@ -123,6 +128,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
 
         proxy_intercept_errors on;
         error_page 404 /404.html;
