--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ upstream pgadmin {
     server 192.160.1.3;
 }
 
+upstream analytics {
+    server 192.160.10.3;
+}
+
 upstream admin {
     server 192.160.200.2:3000;
 }
@@ -158,6 +162,21 @@ server {
         rewrite ^/admin/(.*)$ /$1 break;
 
         proxy_pass http://admin;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+
+        proxy_intercept_errors on;
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /500.html;
+    }
+
+    location /v1/analytics/ {
+        rewrite ^/v1/analytics/(.*)$ /$1 break;
+
+        proxy_pass http://analytics;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
