--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,12 @@
+## Admin
+upstream pgadmin {
+    server 192.160.1.3;
+}
+
+upstream admin {
+    server 192.160.1.4;
+}
+
 ## Server backend
 upstream authentication {
     server 192.160.100.2;
@@ -7,17 +16,8 @@ upstream platform {
     server 192.160.100.3;
 }
 
-## Admin
-upstream pgadmin {
-    server 192.160.1.3;
-}
-
 upstream analytics {
     server 192.160.10.3;
-}
-
-upstream admin {
-    server 192.160.200.2:3000;
 }
 
 ## Server frontend
@@ -143,6 +143,7 @@ server {
         error_page 500 502 503 504 /500.html;
     }
 
+
     location /pgadmin/ {
         rewrite ^/pgadmin/(.*)$ /$1 break;
 
@@ -159,7 +160,7 @@ server {
     }
 
     location /admin/ {
-        rewrite ^/admin/(.*)$ /$1 break;
+        #rewrite ^/admin/(.*)$ /$1 break;
 
         proxy_pass http://admin;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -167,6 +168,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
 
         proxy_intercept_errors on;
         error_page 404 /404.html;
