--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,35 @@
-## Admin
+## Configuration
 upstream pgadmin {
     server 192.160.1.3;
 }
 
-upstream admin {
-    server 192.160.1.4;
-}
-
 ## Server backend
 upstream authentication {
-    server 192.160.100.2;
+    server 192.160.2.2;
 }
 
 upstream platform {
-    server 192.160.100.3;
+    server 192.160.3.2;
 }
 
 upstream analytics {
-    server 192.160.100.4;
+    server 192.160.4.2;
+}
+
+upstream admin {
+    server 192.160.5.2;
 }
 
 ## Server frontend
 upstream authentication-ui {
-    server 192.160.200.2:3000;
+    server 192.160.201.2:3000;
+
 }
 
 upstream platform-ui {
-    server 192.160.200.3:3000;
+    server 192.160.202.2:3000;
 }
+
 
 ## Config for auth.cubiko.dev
 server {
@@ -160,8 +162,6 @@ server {
     }
 
     location /admin/ {
-        #rewrite ^/admin/(.*)$ /$1 break;
-
         proxy_pass http://admin;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
